Fixes layout & overflow.

--- a/src/index.css
+++ b/src/index.css
@@ -25,8 +25,8 @@
 
 #game-of-life .cell {
   display: table-cell;
-  width: 23px;
-  height: 23px;
+  min-width: 15px;
+  height: 15px;
   border: 2px solid #d8d7d7;
   border-radius: 50%;
   cursor: pointer;
@@ -41,16 +41,16 @@
 }
 
 #stats-and-controls-container {
-  margin-top: 5px;
+  margin: 5px 0 10px 0;
   display: flex;
-  flex-direction: row;
-  justify-content: space-between;
+  flex-direction: column;
 }
 #stats-container {
   display: flex;
   flex-direction: column;
 }
 #controls-container {
+  margin-top: 5px;
   display: flex;
   align-items: center;
 }
